After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 750094 - [regression] seek in H264 streams fails
[regression] seek in H264 streams fails
Status: RESOLVED FIXED
Product: gstreamer-vaapi
Classification: Other
Component: general
git master
Other Linux
: High blocker
: ---
Assigned To: gstreamer-vaapi maintainer(s)
gstreamer-vaapi maintainer(s)
Depends on:
Blocks: 743569
 
 
Reported: 2015-05-29 10:43 UTC by Víctor Manuel Jáquez Leal
Modified: 2015-06-02 09:53 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Víctor Manuel Jáquez Leal 2015-05-29 10:43:56 UTC
With the patches pushed because of bug #745048, now the seek operation is not possible in many H264 streams.

How to reproduce it:

$ gst-play-1.0 ~/300\ -\ Rise\ of\ an\ Empire\ -\ Trailer\ 2.mp4
 
And press the {right,left} arrow keys

1. http://www.digital-digest.com/movies/300_Rise_of_an_Empire_1080p_Theatrical_Trailer_2.html
Comment 1 Gwenole Beauchesne 2015-05-29 13:16:33 UTC
probably disable the "wait for first I-frame" maybe?
Comment 2 Gwenole Beauchesne 2015-06-02 08:27:46 UTC
With 1.4, this can work, but indeed not always with the same stream. So, this could be a side effect or some other bug that resurfaces easily with the new patches.

The point is that, while seeking, the decoder is destroyed then re-created, so the state is quite clean and it seems legitimate to wait for the next I-frame.
Comment 3 Gwenole Beauchesne 2015-06-02 08:42:22 UTC
I will push a fix. Thanks.
Comment 4 Gwenole Beauchesne 2015-06-02 09:53:30 UTC
commit d2791a7844b83bb0bad40784541aa57403214f6e
Author: Gwenole Beauchesne <gwenole.beauchesne@intel.com>
Date:   Tue Jun 2 11:46:00 2015 +0200

    decoder: h264: fix uninitialized variables in avcC mode.
    
    Fix uninitialized variables when decoding SPS and PPS NAL units from
    "codec-data" buffers. This is particularly important when seeking ops
    are involved, and the new persistent states are used more often.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=750094